Update scritp for database; card and set form

--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -16,9 +16,9 @@ multi_database = "1"
 ; public_view = "1"
 ; public_entry = "PublicView"
 
-;request_log_service = SystemRequestLogService
-;request_log = 1
-;request_log_types = cli,web,rest
+request_log_service = SystemRequestLogService
+request_log = 1
+request_log_types = cli,web,rest
 
 [permission]
 ; Public classes, anyone (logged or not) has access
